==> Humanity-Three/26H/src/OLED.c <==
#include "OLED.h"
#include "ti/driverlib/m0p/dl_core.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_ENTER_CRITICAL()
#define OLED_EXIT_CRITICAL()
#define OLED_I2C_ADDR       0x3C
#define OLED_DATA_CHUNK     7
#define OLED_I2C_TIMEOUT    100000U
#define OLED_SCL_PORT       GPIO_OLED_I2C_SCL_PORT
#define OLED_SCL_PIN        GPIO_OLED_I2C_SCL_PIN
#define OLED_SCL_IOMUX      GPIO_OLED_I2C_IOMUX_SCL
#define OLED_SDA_PORT       GPIO_OLED_I2C_SDA_PORT
#define OLED_SDA_PIN        GPIO_OLED_I2C_SDA_PIN
#define OLED_SDA_IOMUX      GPIO_OLED_I2C_IOMUX_SDA

void OLED_GPIO_Init(void)
{
	uint32_t i, j;
	
	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i ++)
	{
		for (j = 0; j < 1000; j ++);
	}

	DL_GPIO_initDigitalOutput(OLED_SCL_IOMUX);
	DL_GPIO_initDigitalOutput(OLED_SDA_IOMUX);
	DL_GPIO_setPins(OLED_SCL_PORT, OLED_SCL_PIN);
	DL_GPIO_setPins(OLED_SDA_PORT, OLED_SDA_PIN);
	DL_GPIO_enableOutput(OLED_SCL_PORT, OLED_SCL_PIN);
	DL_GPIO_enableOutput(OLED_SDA_PORT, OLED_SDA_PIN);
}

static void OLED_W_SCL(uint8_t bitValue)
{
	if (bitValue != 0U) {
		DL_GPIO_setPins(OLED_SCL_PORT, OLED_SCL_PIN);
	} else {
		DL_GPIO_clearPins(OLED_SCL_PORT, OLED_SCL_PIN);
	}
	delay_cycles(40);
}

static void OLED_W_SDA(uint8_t bitValue)
{
	if (bitValue != 0U) {
		DL_GPIO_setPins(OLED_SDA_PORT, OLED_SDA_PIN);
	} else {
		DL_GPIO_clearPins(OLED_SDA_PORT, OLED_SDA_PIN);
	}
	delay_cycles(40);
}

void OLED_ShowChar(uint8_t X, uint8_t Y, char Char, uint8_t FontSize)
{
	if (FontSize == OLED_8X16)		//字体为宽8像素，高16像素
	{
		/*将ASCII字模库OLED_F8x16的指定数据以8*16的图像格式显示*/
		OLED_ShowImage(X, Y, 8, 16, OLED_F8x16[Char - ' ']);
	}
	else if(FontSize == OLED_6X8)	//字体为宽6像素，高8像素
	{
		/*将ASCII字模库OLED_F6x8的指定数据以6*8的图像格式显示*/
		OLED_ShowImage(X, Y, 6, 8, OLED_F6x8[Char - ' ']);
	}
	else if(FontSize == OLED_7X12)	//字体为宽6像素，高8像素
	{
		/*将ASCII字模库OLED_F6x8的指定数据以6*8的图像格式显示*/
		OLED_ShowImage(X, Y, 7, 12, OLED_F7x12[Char - ' ']);
	}
}

void OLED_ShowCharArea(uint8_t RangeX,uint8_t RangeY,uint8_t RangeWidth,uint8_t RangeHeight, int16_t X, int16_t Y, char Char, uint8_t FontSize)
{
	
	if (FontSize == OLED_8X16)		//字体为宽8像素，高16像素
	{
		/*将ASCII字模库OLED_F8x16的指定数据以8*16的图像格式显示*/
		OLED_ShowImageArea(X, Y, 8, 16, RangeX, RangeY, RangeWidth, RangeHeight, OLED_F8x16[Char - ' ']);
	}
	else if(FontSize == OLED_6X8)	//字体为宽6像素，高8像素
	{
		/*将ASCII字模库OLED_F6x8的指定数据以6*8的图像格式显示*/
		
		OLED_ShowImageArea(X, Y, 6, 8, RangeX, RangeY, RangeWidth, RangeHeight, OLED_F6x8[Char - ' ']);
	}
	else if(FontSize == OLED_7X12)	//字体为宽6像素，高8像素
	{
		/*将ASCII字模库OLED_F6x8的指定数据以6*8的图像格式显示*/
		OLED_ShowImageArea(X, Y, 7, 12, RangeX, RangeY, RangeWidth, RangeHeight, OLED_F7x12[Char - ' ']);
	}
}

void OLED_ShowChinese(uint8_t X, uint8_t Y, char *Chinese, uint8_t FontSize)
{
    uint8_t pChinese = 0;
    uint8_t pIndex;
    uint8_t i;
    char SingleChinese[OLED_CHN_CHAR_WIDTH + 1] = {0};
    
    for (i = 0; Chinese[i] != '\0'; i ++)    // 遍历汉字串
    {
        SingleChinese[pChinese] = Chinese[i];    // 提取汉字串数据到单个汉字数组
        pChinese ++;                            // 计次自增
        
        if (pChinese >= OLED_CHN_CHAR_WIDTH)    // 提取到了一个完整的汉字
        {
            pChinese = 0;    // 计次归零
            const void* fontArray = FontSize == 12 ? (const void*) OLED_CF12x12 : (const void*) OLED_CF16x16;  
		if(FontSize==12){
			for (pIndex = 0; strcmp(((const ChineseCell12x12_t*)fontArray)[pIndex].Index, "") != 0; pIndex ++)
            {
                if (strcmp(((const ChineseCell12x12_t*)fontArray)[pIndex].Index, SingleChinese) == 0)
                {
                    break;
                }
            }
            OLED_ShowImage(X + ((i + 1) / OLED_CHN_CHAR_WIDTH - 1) * 12, Y, 12, 12, ((const ChineseCell12x12_t*)fontArray)[pIndex].Data);
		}else{
			for (pIndex = 0; strcmp(((const ChineseCell16x16_t*)fontArray)[pIndex].Index, "") != 0; pIndex ++)
            {
                if (strcmp(((const ChineseCell16x16_t*)fontArray)[pIndex].Index, SingleChinese) == 0)
                {
                    break;
                }
            }
		OLED_ShowImage(X + ((i + 1) / OLED_CHN_CHAR_WIDTH - 1) * 16, Y, 16, 16, ((const ChineseCell16x16_t*)fontArray)[pIndex].Data);
		}
        }
    }
}

void OLED_ShowChineseArea(uint8_t RangeX,uint8_t RangeY,uint8_t RangeWidth,uint8_t RangeHeight, int16_t X, int16_t Y, char *Chinese, uint8_t FontSize)
{
    uint8_t pChinese = 0;
    uint8_t pIndex;
    uint8_t i;
    char SingleChinese[OLED_CHN_CHAR_WIDTH + 1] = {0};
    
    for (i = 0; Chinese[i] != '\0'; i ++)    // 遍历汉字串
    {
        SingleChinese[pChinese] = Chinese[i];    // 提取汉字串数据到单个汉字数组
        pChinese ++;                            // 计次自增
        
        if (pChinese >= OLED_CHN_CHAR_WIDTH)    // 提取到了一个完整的汉字
        {
            pChinese = 0;    // 计次归零
            const void* fontArray = FontSize == 12 ? (const void*) OLED_CF12x12 : (const void*) OLED_CF16x16;  
		if(FontSize==12){
			for (pIndex = 0; strcmp(((const ChineseCell12x12_t*)fontArray)[pIndex].Index, "") != 0; pIndex ++)
            {
                if (strcmp(((const ChineseCell12x12_t*)fontArray)[pIndex].Index, SingleChinese) == 0)
                {
                    break;
                }
            }
			OLED_ShowImageArea(X + ((i + 1) / OLED_CHN_CHAR_WIDTH - 1) * 12, Y, 12, 12, RangeX, RangeY, RangeWidth, RangeHeight, ((const ChineseCell12x12_t*)fontArray)[pIndex].Data);
				
		}else{
			for (pIndex = 0; strcmp(((const ChineseCell16x16_t*)fontArray)[pIndex].Index, "") != 0; pIndex ++)
            {
                if (strcmp(((const ChineseCell16x16_t*)fontArray)[pIndex].Index, SingleChinese) == 0)
                {
                    break;
                }
            }
				OLED_ShowImageArea(X + ((i + 1) / OLED_CHN_CHAR_WIDTH - 1) * 16, Y, 16, 16, RangeX, RangeY, RangeWidth, RangeHeight,((const ChineseCell16x16_t*)fontArray)[pIndex].Data);

			}
        }
    }
}
